components/policies/pod-security-standards/baseline/restrict-sysctls/binding.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-sysctls
  labels:
    app.kubernetes.io/name: restrict-sysctls
    app.kubernetes.io/component: pod-security-standards-baseline
spec:
  policyName: restrict-sysctls
  validationActions: [Deny]
